cupt (2.2.0~rc2) UNRELEASED; urgency=low

  * lib:
    - system/worker:
      - Downloading of index data should continue regardless of the download
        result of Release signature. Thanks to Karol Kozłowski for the report.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 05 Sep 2011 21:04:52 +0300

cupt (2.2.0~rc1) experimental; urgency=low

  * console:
    - Managing packages:
      - New positional action override options '--install', '--remove',
        '--satisfy', '--unsatisfy'.
      - The option '--purge' is converted to positional action override one.
      - The action 'purge' does not set global purge flag anymore but only
        purges packages specified as arguments.
    - 'clean', 'autoclean': remove also partially downloaded archive files.
      Thanks to Karol Kozłowski for the suggestion. (Closes: #633485)
    - 'version': support '-v' as a alias again. (Closes: #640148)
  * lib:
    - system/worker:
      - New method 'setPackagePurgeFlag'.
      - The global purge option now unconditionally purges all removed
        packages again.
      - New method 'deletePartialArchives'.
      - Really allow removing Essential packages (when requested and passed
        all front-end checks).
      - Unpack/configure actions of some important packages were not optimally
        merged before when there are reverse-[Pre-]Depends.
      - Prefer temporary breaking reverse-Depends than anything else.
        (Closes: #637233)
      - Don't modify first-level priorities of non-first subactions of
        the same package, except of incrementing prioties for
        unpack-after-removal actions.
      - Greatly simplified the algorithm of setting priority links. Increases
        processing speed a lot.
      - Set dependency dpkg force options according to broken relations, not
        "nothing or all".
      - Make dpkg sequence output fixed between the different runs for the
        same input.