@@ -4,6 +4,9 @@ cupt (2.2.0~rc2) UNRELEASED; urgency=low
     - system/worker:
       - Downloading of index data should continue regardless of the download
         result of Release signature. Thanks to Karol Kozłowski for the report.
+    - hashsums:
+      - Don't check gcrypt version despite what is advised in its manual.
+        Linker does its work fine.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 05 Sep 2011 21:04:52 +0300
 
